# indirect_prompt_injection_with_resume

./: LICENSE  README.md  pyproject.toml
back/: main.py
back/functions/: ai_processing.py
front/: index.html  script.js  style.css
