[tool.poetry]
name = "owasp-prompt-injection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
langchain = "^0.2.3"
aiofiles = "^23.2.1"
langchain-community = "^0.2.4"
langchain-core = "^0.2.5"
pypdf = "^4.2.0"
langchain-anthropic = "^0.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
